[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/game/entities/enemies/pod/BattlePod.gd" type="Script" id=1]
[ext_resource path="res://src/game/entities/enemies/pod/BattlePodIdleState.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/pewpew_4.wav" type="AudioStream" id=3]
[ext_resource path="res://src/game/entities/enemies/pod/BattlePodAlertState.gd" type="Script" id=4]
[ext_resource path="res://src/game/entities/enemies/pod/BattlePodWalkState.gd" type="Script" id=5]
[ext_resource path="res://assets/textures/enemies/battlepod/battlepod2.png" type="Texture" id=6]
[ext_resource path="res://src/game/entities/enemies/pod/BattlePodStateMachine.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/bomb-explossion.mp3" type="AudioStream" id=8]
[ext_resource path="res://src/game/entities/enemies/pod/BattlePodDieState.gd" type="Script" id=9]
[ext_resource path="res://assets/sounds/toy_robot_walk_001.mp3" type="AudioStream" id=10]
[ext_resource path="res://src/game/entities/enemies/pod/BattlePodExplodeState.gd" type="Script" id=11]
[ext_resource path="res://src/game/shaders/flash.gdshader" type="Shader" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 34 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.72549, 0.109804, 0.345098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 12 )
shader_param/flash_color = Color( 0.756863, 0.0823529, 0.0823529, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id=4]
radius = 226.874

[sub_resource type="CapsuleShape2D" id=5]
radius = 25.6949
height = 26.5922

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Walk:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 10 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/Body:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "alert"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0420452, 0.0718894, 0.104784, 0.140729, 0.164472, 0.205271, 0.227179, 0.261244, 0.290888, 0.317682, 0.353627, 0.380421, 0.410265, 0.440109, 0.469953, 0.505898, 0.541843, 0.571571, 0.586164, 0.612958, 0.639752, 0.735111 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 12, 13, 14, 15, 16, 17, 19, 21, 31, 34, 35, 36, 37, 38, 39, 40, 41, 44, 46, 47, 48, 49, 51 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Explosion")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 3.97,
"start_offset": 0.3,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.0149304 )
}

[sub_resource type="Animation" id=10]
resource_name = "fire_start"
length = 0.8
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.430046 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_do_fire"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Fire")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.665057,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.420367 )
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Walk")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0.0199348 )
}

[node name="BattlePod" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Die"), NodePath("Alert"), NodePath("Walk"), NodePath("Explode") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
state_id = "idle"

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
state_id = "die"

[node name="Explode" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
state_id = "explode"

[node name="Timer" type="Timer" parent="StateMachine/Explode"]

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
state_id = "alert"

[node name="Timer" type="Timer" parent="StateMachine/Alert"]
wait_time = 2.0

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
state_id = "walk"

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 0, -1 )

[node name="HUD" type="Node2D" parent="Pivot"]
position = Vector2( 0, -5.36442e-07 )

[node name="Control" type="Control" parent="Pivot/HUD"]
margin_left = -16.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = -35.0

[node name="LifeProgressBar" type="ProgressBar" parent="Pivot/HUD/Control"]
margin_top = 5.0
margin_right = 32.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 10.0
step = 1.0
value = 5.0
rounded = true
percent_visible = false

[node name="FirePosition" type="Position2D" parent="Pivot"]
position = Vector2( -22, -14.0339 )

[node name="RayCast2D" type="RayCast2D" parent="Pivot"]
position = Vector2( 0, 1 )
cast_to = Vector2( -120, 0 )
collision_mask = 3

[node name="Body" type="Sprite" parent="Pivot"]
material = SubResource( 14 )
texture = ExtResource( 6 )
hframes = 12
vframes = 10

[node name="DetectionArea" type="Area2D" parent="Pivot"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/DetectionArea"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="CollisionArea" type="Area2D" parent="Pivot"]
visible = false
collision_layer = 9
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/CollisionArea"]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/alert = SubResource( 7 )
anims/attack = SubResource( 8 )
anims/die = SubResource( 9 )
anims/fire_start = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/walk = SubResource( 12 )

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Items"

[node name="Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
max_distance = 600.0
bus = "Items"

[node name="Explossion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
max_distance = 1000.0
bus = "Items"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="die" from="." to="." method="_on_character_die"]
[connection signal="hit" from="." to="StateMachine" method="_on_damage_received"]
[connection signal="body_entered" from="Pivot/DetectionArea" to="StateMachine" method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="Pivot/DetectionArea" to="StateMachine" method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="Pivot/CollisionArea" to="." method="_on_collision_area_body_enter"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]
